Fix mailing form when nav scrollbar appears

--- a/css/themes/wakanda/mailing.scss
+++ b/css/themes/wakanda/mailing.scss
@@ -2,7 +2,7 @@
 ---
 
 #mc_embed_signup{
-  padding: 0 22px 0 22px;
+  padding: 0 0 0 22px;
   color:#555; 
   
   h2 {
@@ -15,7 +15,7 @@
   }
   .email {
     padding: 5px 3px;
-    width: 125px;
+    width: 123px;
   }
   .button {
     background-color:#fbb500;
